2007-08-14  Andreas Kupries <andreask@activestate.com>

	* tests/fa_symbols_at.test: Added proper documentation for the
	* fa.tcl: methods symbols@ and symbols@set. Extended method
	* fa.man: symbols@ to allow querying of symbols between two
	* pkgIndex.tcl: states, extended documentation, and updated
	  testsuite. Bumped package version to 0.3.

2007-06-22  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* faop.tcl: Replaced deprecated {expand} syntax in comments with
	  {*}.

2007-04-11  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* dacceptor.test: Added the switching of struct::set
	* dexec.test:     implementations to the testsuite.
	* fa.test:
	* faop.test:
	* tests/da_accept.test:
	* tests/da_cons.test:
	* tests/de_cons.test:
	* tests/de_exec.test:
	* tests/fa_cons.test:
	* tests/fa_ec.test:
	* tests/fa_final.test:
	* tests/fa_is.test:
	* tests/fa_is_complete.test:
	* tests/fa_is_deterministic.test:
	* tests/fa_is_epsfree.test:
	* tests/fa_is_useful.test:
	* tests/fa_next.test:
	* tests/fa_reach.test:
	* tests/fa_serial.test:
	* tests/fa_start.test:
	* tests/fa_state.test:
	* tests/fa_states.test:
	* tests/fa_symbol.test:
	* tests/fa_symbols.test:
	* tests/fa_symbols_at.test:
	* tests/fa_useful.test:
	* tests/faop_complete.test:
	* tests/faop_concat.test:
	* tests/faop_determinize.test:
	* tests/faop_difference.test:
	* tests/faop_intersect.test:
	* tests/faop_kleene.test:
	* tests/faop_minimize.test:
	* tests/faop_optional.test:
	* tests/faop_regex.test:
	* tests/faop_remeps.test:
	* tests/faop_reverse.test:
	* tests/faop_trim.test:
	* tests/faop_union.test:

2007-04-03  Andreas Kupries  <andreask@activestate.com>

	* dexec.tcl: Accepted [Tcllib RFE 1692954] and the associated
	* dexec.man: patch [Tcllib Patch 1693491], by Bogdan
	* pkgIndex.tcl: <rftghost@users.sourceforge.net>. Bumped version
	* test/de_exec.test: number to 0.2. New API: State introspection,
	  additional callback invokation for state transitions. Updated